--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/vite": "^4.0.14",
     "preact": "^10.26.2",
     "preact-router": "^4.1.2",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.0.14",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.26.10",
