--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "aws-sdk": "^2.1692.0",
     "preact": "^10.26.2",
     "preact-router": "^4.1.2",
     "tailwindcss": "^4.0.14",
